--- a/Smart.Mock.Data.SqlServer/Smart.Mock.Data.SqlServer.csproj
+++ b/Smart.Mock.Data.SqlServer/Smart.Mock.Data.SqlServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.1</TargetFrameworks>
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SqlServer.DacFx" Version="150.4897.1" />
+    <PackageReference Include="Microsoft.SqlServer.DacFx" Version="150.5084.2" />
   </ItemGroup>
 
   <ItemGroup>
