--- a/Smart.Mock.Data.Tests/Smart.Mock.Data.Tests.csproj
+++ b/Smart.Mock.Data.Tests/Smart.Mock.Data.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.SqlServer.DacFx" Version="162.1.167" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    <PackageReference Include="Usa.Smart.Data.Mapper" Version="2.3.3" />
+    <PackageReference Include="Usa.Smart.Data.Mapper" Version="2.4.0" />
     <PackageReference Include="xunit" Version="2.6.2" />
     <PackageReference Include="xunit.analyzers" Version="1.6.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
